<resources>
    <string name="app_name">Rick and Morty</string>

    <string name="offline_app">No network connections</string>
    <string name="error_message">Something went wrong!</string>

    <string name="character_status">STATUS</string>
    <string name="character_species">SPECIES</string>
    <string name="character_gender">GENDER</string>
    <string name="character_origin">ORIGIN</string>
    <string name="character_last_location">LAST LOCATION</string>

    <string name="character_details_format">id: %1$d - created: %2$s</string>

    <string name="no_offline_data">No offline data!\nConnect network connection and try again…</string>

    <string name="character_killed_by_user">(Killed)</string>
</resources>
