<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mohsenoid.rickandmorty.view.character.details.CharacterDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.character.details.CharacterDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/characterDetailsProgress"
                isLoading="@{viewModel.loadingState}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.mohsenoid.rickandmorty.view.util.SquareImageView
                    imageUrl="@{viewModel.character.imageUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    tools:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/characterDetailsNameBackground"
                    android:orientation="vertical"
                    android:padding="@dimen/keyLine1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.character.name}"
                        android:textAppearance="@style/textAppearanceListItemTitle"
                        tools:text="Character Name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{String.format(@string/character_details_format, viewModel.character.id, viewModel.character.created)}"
                        android:textAppearance="@style/textAppearanceListItemText"
                        tools:text="id: x - Created ..." />
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/keyLine1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/character_status"
                    android:textAppearance="@style/textAppearanceListItemText" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{viewModel.character.status}"
                    android:textAppearance="@style/textAppearanceListItemText"
                    tools:text="Alive" />

                <TextView
                    visibility="@{viewModel.character.isKilledByUser}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/character_killed_by_user"
                    android:textAppearance="@style/textAppearanceListItemText"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/keyLine1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/character_species"
                    android:textAppearance="@style/textAppearanceListItemText" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{viewModel.character.species}"
                    android:textAppearance="@style/textAppearanceListItemText"
                    tools:text="Human" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/keyLine1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/character_gender"
                    android:textAppearance="@style/textAppearanceListItemText" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{viewModel.character.gender}"
                    android:textAppearance="@style/textAppearanceListItemText"
                    tools:text="Male" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/keyLine1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/character_origin"
                    android:textAppearance="@style/textAppearanceListItemText" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{viewModel.character.origin}"
                    android:textAppearance="@style/textAppearanceListItemText"
                    tools:text="unknown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/keyLine1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/character_last_location"
                    android:textAppearance="@style/textAppearanceListItemText" />

                <TextView
                    android:id="@+id/characterLastLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{viewModel.character.location}"
                    android:textAppearance="@style/textAppearanceListItemText"
                    tools:text="unknown" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
